--- a/main.html
+++ b/main.html
@@ -110,6 +110,8 @@
         flex-grow: 1;
         position: relative;
         overflow-y: auto;
+        height: 100%;
+        width: 100%;
     }
 
     /* Calendar styling */
@@ -455,5 +457,6 @@ noticeBox.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
