--- a/admin.html
+++ b/admin.html
@@ -313,6 +313,7 @@ let editingAnnId = null;
 const ann_title = document.getElementById("ann_title");
 const ann_message = document.getElementById("ann_message");
 const ann_status = document.getElementById("ann_status");
+const ann_sentBy = document.getElementById("ann_sentby");
 const annList = document.getElementById("annList");
 
 document.getElementById("ann_clearBtn").onclick = () => {
