added notification symbol

--- a/main.html
+++ b/main.html
@@ -448,7 +448,7 @@ onSnapshot(latestQuery, snapshot => {
         if (Notification.permission === "granted") {
             new Notification("New Announcement", {
                 body: `${data.title} — Sent by ${data.sentBy}`,
-                icon: "https://cdn-icons-png.flaticon.com/512/1827/1827310.png"
+                icon: "https://raw.githubusercontent.com/TheRealDuckers/Grease-PracticeBase/refs/heads/main/icons/icon-512.png"
             });
         }
     }
