--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <input type="password" id="passwordInput" placeholder="Enter Password">
     <button id="loginBtn">Enter</button>
     <div id="errorBox" class="error"></div>
-    <p>Something not right? Check the <a style="color: white" href="https://stats.uptimerobot.com/3Y71CTNRdi/802254719">status page</a>.</p>
+    <p>Something not right? Check the <a style="color: black" href="https://stats.uptimerobot.com/3Y71CTNRdi/802254719">status page</a>.</p>
 </div>
 
 <!-- FIREBASE (MODULAR SDK) -->
