--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
         signInWithEmailAndPassword(auth, email, password)
             .then(() => {
-                window.location.href = "main.html";
+                window.location.href = "https://practicebase.github.io/Grease-PracticeBase";
             })
             .catch(() => {
                 document.getElementById("errorBox").textContent = "Incorrect password";
@@ -118,4 +118,5 @@
 
 </body>
 </html>
+
 
