--- a/main.html
+++ b/main.html
@@ -13,6 +13,10 @@
     navigator.serviceWorker.register("/service-worker.js");
   }
 </script>
+  <script>
+    // Redirect to a new URL
+window.location.href = "https://practicebase.github.io/Grease-PracticeBase/";
+  </script>
 
 <style>
     :root {
@@ -466,6 +470,7 @@ noticeBox.addEventListener("click", () => {
 
 </body>
 </html>
+
 
 
 
