--- a/admin.html
+++ b/admin.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <title>Grease Admin Panel</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script>
+    // Redirect to a new URL
+window.location.href = "https://practicebase.github.io/Grease-PracticeBase/";
+    </script>
 <style>
     body {
         background: #f4f4f9;
@@ -407,4 +411,5 @@ onSnapshot(annQuery, snapshot => {
 
 </body>
 </html>
+
 
