--- a/admin-login.html
+++ b/admin-login.html
@@ -4,6 +4,10 @@
 <meta charset="UTF-8">
 <title>Grease Admin Login</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <script>
+    // Redirect to a new URL
+window.location.href = "https://practicebase.github.io/Grease-PracticeBase/";
+    </script>
 <style>
     body {
         background: #2a2a2a;
@@ -138,4 +142,5 @@
 
 </body>
 </html>
+
 
